@@ -1,3 +1,10 @@
+2016-06-26 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/ds390/gen.c
+	  Fix a bug in genCmp().
+	* support/regression/tests/dhrystone.c
+	  Enabled for ds390.
+
 2016-06-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCicode.c:
